--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,14 +15,17 @@
     <meta property="og:url" content="https://questify-frontend-ruby.vercel.app/" />
     <meta property="og:title" content="Questify - Student Engagement MCQ System" />
     <meta property="og:description" content="Interactive MCQ platform for students and educators. Engage, learn, and track progress with Questify." />
-    <meta property="og:image" content="https://placehold.co/1200x630/3b82f6/ffffff?text=Questify+-+Student+Engagement+MCQ+System" />
+    <meta property="og:image" content="https://via.placeholder.com/1200x630/3b82f6/ffffff?text=Questify+-+Student+Engagement+MCQ+System" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:type" content="image/png" />
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://questify-frontend-ruby.vercel.app/" />
     <meta property="twitter:title" content="Questify - Student Engagement MCQ System" />
     <meta property="twitter:description" content="Interactive MCQ platform for students and educators. Engage, learn, and track progress with Questify." />
-    <meta property="twitter:image" content="https://placehold.co/1200x630/3b82f6/ffffff?text=Questify+-+Student+Engagement+MCQ+System" />
+    <meta property="twitter:image" content="https://via.placeholder.com/1200x630/3b82f6/ffffff?text=Questify+-+Student+Engagement+MCQ+System" />
   </head>
   <body>
     <div id="root"></div>
